# rpi-sensor-project

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  release.sh
include/: sensor.h
src/: main.cpp  sensor.cpp
tests/: CMakeLists.txt  sensor_test.cpp
